# cmake_build_fail_example

./: CMakeLists.txt  DevkitArm3DS.cmake  LICENSE
source/: main.cpp
